[gd_scene format=4 uid="uid://dxauqivoa8pbs"]

[ext_resource type="Script" uid="uid://dm5l3ind3rjws" path="res://scenes/tiles/game_scene.gd" id="1_ow4y8"]
[ext_resource type="TileSet" uid="uid://8nxyjkfydhux" path="res://scenes/tiles/tile_set.tres" id="2_2cos2"]
[ext_resource type="Script" uid="uid://ctpfsvh1uh8s0" path="res://scripts/combat/combat_room.gd" id="3_1hwj5"]
[ext_resource type="PackedScene" uid="uid://bjoks4bavokid" path="res://scenes/enemy/enemy.tscn" id="4_k6mbg"]
[ext_resource type="PackedScene" uid="uid://bs1iqmlvhk0cy" path="res://scenes/tiles/Door.tscn" id="5_0rtrp"]
[ext_resource type="PackedScene" uid="uid://cyamb3y7fg167" path="res://scenes/game_room_2.tscn" id="6_lckqn"]
[ext_resource type="PackedScene" uid="uid://b2ync4ygwbf4t" path="res://scenes/player/player.tscn" id="7_e653n"]
[ext_resource type="PackedScene" uid="uid://3hscd5gcbcdj" path="res://scenes/tiles/ambience.tscn" id="8_v2eig"]
[ext_resource type="PackedScene" uid="uid://b3rgip5g2fu2j" path="res://scenes/enviroment/world_environment.tscn" id="9_etc2w"]
[ext_resource type="PackedScene" uid="uid://bphgkwouy8mgs" path="res://scenes/tiles/UI/vignette.tscn" id="10_ox0p2"]
[ext_resource type="PackedScene" uid="uid://c7xsmuj388cqa" path="res://scenes/tiles/UI/fog_layer.tscn" id="11_bmnbl"]
[ext_resource type="PackedScene" uid="uid://d24v160of65gr" path="res://scenes/UI/GameOver.tscn" id="12_iaffk"]
[ext_resource type="PackedScene" uid="uid://brgg0ha0ubxpr" path="res://scenes/UI/tutorial_UI.tscn" id="13_1hwj5"]
[ext_resource type="Script" uid="uid://ipek1f7086v7" path="res://scripts/tutorial/tutorial_manager.gd" id="13_2cos2"]

[sub_resource type="Gradient" id="Gradient_4skr2"]
colors = PackedColorArray(1, 1, 0.8977666, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_eywpb"]
gradient = SubResource("Gradient_4skr2")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)

[node name="Game" type="Node2D" unique_id=1234038209]
script = ExtResource("1_ow4y8")

[node name="TileMap" type="Node2D" parent="." unique_id=1653408405]
position = Vector2(0, 3)
scale = Vector2(4, 4)

[node name="BaseGroundLayer" type="TileMapLayer" parent="TileMap" unique_id=300774101]
z_index = -10
tile_map_data = PackedByteArray("AADw//T/AgAGAAAAAADw//X/AgAGAAAAAADw//b/AgAHAAAAAADw//f/AgAGAAAAAADw//j/AgAGAAAAAADw//n/AgAGAAAAAADw//r/AgAGAAAAAADw//v/AgAGAAAAAADw//z/AgAGAAAAAADw//3/AgAGAAAAAADw//7/AgAGAAAAAADw////AgAGAAAAAADw/wAAAgAGAAAAAADw/wEAAgAJAAAAAADw/wIAAgAGAAAAAADw/wMAAgAGAAAAAADw/wQAAgAGAAAAAADw/wUAAgAGAAAAAADw/wYAAgAGAAAAAADw/wcAAgAJAAAAAADw/wgAAgAGAAAAAADw/wkAAgAGAAAAAADw/wsAAgAGAAAAAADx//T/AgAGAAAAAADx//X/AgAGAAAAAADx//b/AgAGAAAAAADx//f/AgAGAAAAAADx//j/AgAGAAAAAADx//n/AgAHAAAAAADx//r/AgAGAAAAAADx//v/AgAGAAAAAADx//z/AgAHAAAAAADx//3/AgAGAAAAAADx//7/AgAGAAAAAADx////AgAGAAAAAADx/wAAAgAGAAAAAADx/wEAAgAGAAAAAADx/wIAAgAGAAAAAADx/wMAAgAGAAAAAADx/wQAAgAGAAAAAADx/wUAAgAGAAAAAADx/wYAAgAGAAAAAADx/wcAAgAGAAAAAADx/woAAgAGAAAAAADx/wsAAgAGAAAAAADy//T/AgAGAAAAAADy//X/AgAGAAAAAADy//b/AgAGAAAAAADy//f/AgAGAAAAAADy//j/AgAGAAAAAADy//n/AgAGAAAAAADy//r/AgAGAAAAAADy//v/AgAGAAAAAADy//z/AgAGAAAAAADy//3/AgAGAAAAAADy//7/AgAGAAAAAADy////AgAGAAAAAADy/wAAAgAGAAAAAADy/wEAAgAGAAAAAADy/wIAAgAGAAAAAADy/wMAAgAGAAAAAADy/wQAAgAGAAAAAADy/wUAAgAGAAAAAADy/wYAAgAKAAAAAADy/wgAAgAGAAAAAADy/wkAAgAGAAAAAADy/woAAgAGAAAAAADy/wsAAgAGAAAAAADz//T/AgAGAAAAAADz//X/AgAGAAAAAADz//b/AgAGAAAAAADz//f/AgAGAAAAAADz//j/AgAGAAAAAADz//n/AgAGAAAAAADz//r/AgAGAAAAAADz//v/AgAGAAAAAADz//z/AgAJAAAAAADz//3/AgAGAAAAAADz//7/AgAGAAAAAADz////AgAJAAAAAADz/wAAAgAKAAAAAADz/wEAAgAGAAAAAADz/wIAAgAGAAAAAADz/wMAAgAGAAAAAADz/wQAAgAGAAAAAADz/wUAAgAGAAAAAADz/wcAAgAGAAAAAADz/wgAAgAGAAAAAADz/wkAAgAGAAAAAADz/woAAgAGAAAAAADz/wsAAgAGAAAAAAD0//T/AgAGAAAAAAD0//X/AgAGAAAAAAD0//b/AgAGAAAAAAD0//f/AgAJAAAAAAD0//j/AgAGAAAAAAD0//n/AgAGAAAAAAD0//r/AgAGAAAAAAD0//v/AgAGAAAAAAD0//z/AgAGAAAAAAD0//3/AgAHAAAAAAD0//7/AgAGAAAAAAD0////AgAGAAAAAAD0/wAAAgAGAAAAAAD0/wEAAgAGAAAAAAD0/wIAAgAKAAAAAAD0/wMAAgAGAAAAAAD0/wQAAgAGAAAAAAD0/wYAAgAGAAAAAAD0/wcAAgAGAAAAAAD0/wgAAgAGAAAAAAD0/wkAAgAGAAAAAAD0/woAAgAGAAAAAAD0/wsAAgAGAAAAAAD1//T/AgAGAAAAAAD1//X/AgAGAAAAAAD1//b/AgAGAAAAAAD1//f/AgAGAAAAAAD1//j/AgAGAAAAAAD1//n/AgAJAAAAAAD1//r/AgAGAAAAAAD1//v/AgAGAAAAAAD1//z/AgAGAAAAAAD1//3/AgAGAAAAAAD1//7/AgAGAAAAAAD1////AgAGAAAAAAD1/wAAAgAGAAAAAAD1/wEAAgAKAAAAAAD1/wIAAgAGAAAAAAD1/wMAAgAGAAAAAAD1/wUAAgAGAAAAAAD1/wYAAgAGAAAAAAD1/wcAAgAGAAAAAAD1/wgAAgAGAAAAAAD1/wkAAgAGAAAAAAD1/woAAgAGAAAAAAD1/wsAAgAGAAAAAAD2//T/AgAGAAAAAAD2//X/AgAGAAAAAAD2//b/AgAGAAAAAAD2//f/AgAGAAAAAAD2//j/AgAGAAAAAAD2//n/AgAGAAAAAAD2//r/AgAGAAAAAAD2//v/AgAGAAAAAAD2//z/AgAGAAAAAAD2//3/AgAGAAAAAAD2//7/AgAGAAAAAAD2////AgAGAAAAAAD2/wAAAgAGAAAAAAD2/wEAAgAGAAAAAAD2/wQAAgAGAAAAAAD2/wUAAgAGAAAAAAD2/wYAAgAGAAAAAAD2/wcAAgAGAAAAAAD2/wgAAgAGAAAAAAD2/wkAAgAGAAAAAAD2/woAAgAGAAAAAAD2/wsAAgAGAAAAAAD3//T/AgAGAAAAAAD3//X/AgAGAAAAAAD3//b/AgAGAAAAAAD3//f/AgAGAAAAAAD3//j/AgAGAAAAAAD3//n/AgAGAAAAAAD3//r/AgAGAAAAAAD3//v/AgAGAAAAAAD3//z/AgAGAAAAAAD3//3/AgAGAAAAAAD3//7/AgAGAAAAAAD3////AgAGAAAAAAD3/wAAAgAGAAAAAAD3/wIAAgAGAAAAAAD3/wMAAgAGAAAAAAD3/wQAAgAHAAAAAAD3/wUAAgAGAAAAAAD3/wYAAgAGAAAAAAD3/wcAAgAGAAAAAAD3/wgAAgAGAAAAAAD3/wkAAgAGAAAAAAD3/woAAgAGAAAAAAD3/wsAAgAHAAAAAAD4//T/AgAGAAAAAAD4//X/AgAGAAAAAAD4//b/AgAGAAAAAAD4//f/AgAGAAAAAAD4//j/AgAHAAAAAAD4//n/AgAGAAAAAAD4//r/AgAGAAAAAAD4//v/AgAGAAAAAAD4//z/AgAJAAAAAAD4//3/AgAGAAAAAAD4//7/AgAGAAAAAAD4////AgAGAAAAAAD4/wEAAgAGAAAAAAD4/wIAAgAGAAAAAAD4/wMAAgAGAAAAAAD4/wQAAgAGAAAAAAD4/wUAAgAGAAAAAAD4/wYAAgAGAAAAAAD4/wcAAgAGAAAAAAD4/wgAAgAHAAAAAAD4/wkAAgAGAAAAAAD4/woAAgAGAAAAAAD4/wsAAgAGAAAAAAD5//T/AgAGAAAAAAD5//X/AgAJAAAAAAD5//b/AgAGAAAAAAD5//f/AgAJAAAAAAD5//j/AgAGAAAAAAD5//n/AgAJAAAAAAD5//r/AgAJAAAAAAD5//v/AgAHAAAAAAD5//z/AgAGAAAAAAD5//3/AgAGAAAAAAD5//7/AgAGAAAAAAD5/wAAAgAGAAAAAAD5/wEAAgAGAAAAAAD5/wIAAgAGAAAAAAD5/wMAAgAGAAAAAAD5/wQAAgAGAAAAAAD5/wUAAgAGAAAAAAD5/wYAAgAGAAAAAAD5/wcAAgAGAAAAAAD5/wgAAgAGAAAAAAD5/wkAAgAGAAAAAAD5/woAAgAHAAAAAAD5/wsAAgAGAAAAAAD6//T/AgAGAAAAAAD6//X/AgAJAAAAAAD6//b/AgAGAAAAAAD6//f/AgAJAAAAAAD6//j/AgAJAAAAAAD6//n/AgAGAAAAAAD6//r/AgAGAAAAAAD6//v/AgAGAAAAAAD6//z/AgAGAAAAAAD6////AgAJAAAAAAD6/wAAAgAGAAAAAAD6/wEAAgAGAAAAAAD6/wIAAgAGAAAAAAD6/wMAAgAGAAAAAAD6/wQAAgAGAAAAAAD6/wUAAgAGAAAAAAD6/wYAAgAGAAAAAAD6/wcAAgAGAAAAAAD6/wgAAgAGAAAAAAD6/wkAAgAGAAAAAAD6/woAAgAGAAAAAAD6/wsAAgAGAAAAAAD7//T/AgAGAAAAAAD7//X/AgAGAAAAAAD7//b/AgAGAAAAAAD7//f/AgAGAAAAAAD7//j/AgAHAAAAAAD7//n/AgAGAAAAAAD7//r/AgAGAAAAAAD7//v/AgAHAAAAAAD7//3/AgAGAAAAAAD7//7/AgAGAAAAAAD7////AgAGAAAAAAD7/wAAAgAGAAAAAAD7/wEAAgAJAAAAAAD7/wIAAgAKAAAAAAD7/wMAAgAGAAAAAAD7/wQAAgAGAAAAAAD7/wUAAgAGAAAAAAD7/wYAAgAGAAAAAAD7/wcAAgAGAAAAAAD7/wgAAgAGAAAAAAD7/wkAAgAGAAAAAAD7/woAAgAGAAAAAAD7/wsAAgAGAAAAAAD8//T/AgAGAAAAAAD8//X/AgAGAAAAAAD8//b/AgAGAAAAAAD8//f/AgAHAAAAAAD8//j/AgAGAAAAAAD8//n/AgAGAAAAAAD8//r/AgAGAAAAAAD8//z/AgAGAAAAAAD8//3/AgAJAAAAAAD8//7/AgAGAAAAAAD8////AgAGAAAAAAD8/wAAAgAGAAAAAAD8/wEAAgAGAAAAAAD8/wIAAgAGAAAAAAD8/wMAAgAGAAAAAAD8/wQAAgAGAAAAAAD8/wUAAgAGAAAAAAD8/wYAAgAGAAAAAAD8/wcAAgAGAAAAAAD8/wgAAgAGAAAAAAD8/wkAAgAGAAAAAAD8/woAAgAGAAAAAAD8/wsAAgAGAAAAAAD9//T/AgAGAAAAAAD9//X/AgAGAAAAAAD9//b/AgAGAAAAAAD9//f/AgAGAAAAAAD9//j/AgAGAAAAAAD9//n/AgAGAAAAAAD9//v/AgAGAAAAAAD9//z/AgAGAAAAAAD9//3/AgAGAAAAAAD9//7/AgAGAAAAAAD9////AgAGAAAAAAD9/wAAAgAGAAAAAAD9/wEAAgAGAAAAAAD9/wIAAgAGAAAAAAD9/wMAAgAGAAAAAAD9/wQAAgAGAAAAAAD9/wUAAgAGAAAAAAD9/wYAAgAKAAAAAAD9/wcAAgAHAAAAAAD9/wgAAgAGAAAAAAD9/wkAAgAGAAAAAAD9/woAAgAGAAAAAAD9/wsAAgAGAAAAAAD+//T/AgAGAAAAAAD+//X/AgAGAAAAAAD+//b/AgAGAAAAAAD+//f/AgAGAAAAAAD+//j/AgAGAAAAAAD+//r/AgAGAAAAAAD+//v/AgAGAAAAAAD+//z/AgAGAAAAAAD+//3/AgAKAAAAAAD+//7/AgAGAAAAAAD+////AgAGAAAAAAD+/wAAAgAGAAAAAAD+/wEAAgAGAAAAAAD+/wIAAgAGAAAAAAD+/wMAAgAGAAAAAAD+/wQAAgAGAAAAAAD+/wUAAgAGAAAAAAD+/wYAAgAGAAAAAAD+/wcAAgAGAAAAAAD+/wgAAgAGAAAAAAD+/wkAAgAGAAAAAAD+/woAAgAGAAAAAAD+/wsAAgAGAAAAAAD///T/AgAGAAAAAAD///X/AgAGAAAAAAD///b/AgAGAAAAAAD///n/AgAGAAAAAAD///r/AgAGAAAAAAD///v/AgAGAAAAAAD///z/AgAGAAAAAAD///3/AgAKAAAAAAD///7/AgAGAAAAAAD/////AgAGAAAAAAD//wAAAgAGAAAAAAD//wEAAgAGAAAAAAD//wIAAgAGAAAAAAD//wMAAgAGAAAAAAD//wQAAgAGAAAAAAD//wUAAgAGAAAAAAD//wYAAgAGAAAAAAD//wcAAgAGAAAAAAD//wgAAgAGAAAAAAD//wkAAgAGAAAAAAD//woAAgAGAAAAAAD//wsAAgAGAAAAAAAAAPT/AgAGAAAAAAAAAPX/AgAGAAAAAAAAAPf/AgAGAAAAAAAAAPj/AgAGAAAAAAAAAPn/AgAGAAAAAAAAAPr/AgAGAAAAAAAAAPv/AgAGAAAAAAAAAPz/AgAHAAAAAAAAAP3/AgAGAAAAAAAAAP7/AgAHAAAAAAAAAP//AgAGAAAAAAAAAAAAAgAGAAAAAAAAAAEAAgAGAAAAAAAAAAIAAgAHAAAAAAAAAAMAAgAGAAAAAAAAAAQAAgAGAAAAAAAAAAUAAgAGAAAAAAAAAAYAAgAGAAAAAAAAAAcAAgAGAAAAAAAAAAgAAgAGAAAAAAAAAAkAAgAGAAAAAAAAAAoAAgAGAAAAAAAAAAsAAgAGAAAAAAABAPT/AgAGAAAAAAABAPb/AgAGAAAAAAABAPf/AgAGAAAAAAABAPj/AgAGAAAAAAABAPn/AgAGAAAAAAABAPr/AgAGAAAAAAABAPv/AgAGAAAAAAABAPz/AgAGAAAAAAABAP3/AgAHAAAAAAABAP7/AgAGAAAAAAABAP//AgAGAAAAAAABAAAAAgAGAAAAAAABAAEAAgAGAAAAAAABAAIAAgAGAAAAAAABAAMAAgAGAAAAAAABAAQAAgAGAAAAAAABAAUAAgAGAAAAAAABAAYAAgAGAAAAAAABAAcAAgAGAAAAAAABAAgAAgAGAAAAAAABAAkAAgAGAAAAAAABAAoAAgAGAAAAAAABAAsAAgAGAAAAAAACAPX/AgAGAAAAAAACAPb/AgAGAAAAAAACAPf/AgAGAAAAAAACAPj/AgAGAAAAAAACAPn/AgAGAAAAAAACAPr/AgAGAAAAAAACAPv/AgAGAAAAAAACAPz/AgAGAAAAAAACAP3/AgAGAAAAAAACAP7/AgAGAAAAAAACAP//AgAGAAAAAAACAAAAAgAGAAAAAAACAAEAAgAGAAAAAAACAAIAAgAGAAAAAAACAAMAAgAGAAAAAAACAAQAAgAGAAAAAAACAAUAAgAGAAAAAAACAAYAAgAGAAAAAAACAAcAAgAGAAAAAAACAAgAAgAGAAAAAAACAAkAAgAGAAAAAAACAAoAAgAGAAAAAAACAAsAAgAGAAAAAADv/woAAgAGAAAAAADv/wkAAgAGAAAAAADv/wgAAgAGAAAAAADv/wcAAgAGAAAAAADv/wYAAgAGAAAAAADv/wUAAgAGAAAAAADv/wQAAgAGAAAAAADv/wMAAgAGAAAAAADv/wIAAgAGAAAAAADv/wEAAgAGAAAAAADv/wAAAgAGAAAAAADv////AgAGAAAAAADv//7/AgAGAAAAAADv//3/AgAGAAAAAADv//z/AgAGAAAAAADv//v/AgAGAAAAAADv//r/AgAGAAAAAADv//n/AgAGAAAAAADv//j/AgAGAAAAAADv//f/AgAGAAAAAADv//b/AgAGAAAAAADv//X/AgAGAAAAAADv//T/AgAGAAAAAADv/wsAAgAGAAAAAADw/woAAgAGAAAAAADx/wkAAgAGAAAAAADx/wgAAgAGAAAAAADy/wcAAgAHAAAAAADz/wYAAgAGAAAAAAD0/wUAAgAGAAAAAAD1/wQAAgAGAAAAAAD2/wMAAgAHAAAAAAD2/wIAAgAGAAAAAAD3/wEAAgAKAAAAAAD4/wAAAgAGAAAAAAD5////AgAKAAAAAAD6//7/AgAGAAAAAAD6//3/AgAJAAAAAAD7//z/AgAJAAAAAAD8//v/AgAGAAAAAAD9//r/AgAGAAAAAAD+//n/AgAGAAAAAAD///j/AgAGAAAAAAD///f/AgAGAAAAAAAAAPb/AgAGAAAAAAABAPX/AgAGAAAAAAACAPT/AgAGAAAAAAD4//P/AgAHAAAAAAA=")
tile_set = ExtResource("2_2cos2")

[node name="Enviroment" type="Node2D" parent="." unique_id=538283779]

[node name="CombatRoom" type="Node2D" parent="Enviroment" unique_id=1380398732]
y_sort_enabled = true
position = Vector2(0, 2)
script = ExtResource("3_1hwj5")
enemy_scene = ExtResource("4_k6mbg")
wave_count = 1

[node name="EnviromentLayer" type="Node2D" parent="Enviroment/CombatRoom" unique_id=362066009]
y_sort_enabled = true

[node name="EnviromentLayer" type="TileMapLayer" parent="Enviroment/CombatRoom/EnviromentLayer" unique_id=1443332372]
y_sort_enabled = true
position = Vector2(4, 0)
scale = Vector2(4, 4)
tile_map_data = PackedByteArray("AADu//T/AQACAAAAAADu//X/AQACAAAAAADu//b/AQACAAAAAADu//f/AQACAAAAAADu//j/AQACAAAAAADu//n/AQACAAAAAADu//r/AQACAAAAAADu//v/AQACAAAAAADu//z/AQACAAAAAADu//3/AQACAAAAAADu//7/AQACAAAAAADu////AQACAAAAAADu/wAAAQACAAAAAADu/wEAAQACAAAAAADu/wIAAQACAAAAAADu/wMAAQACAAAAAADu/wQAAQACAAAAAADu/wUAAQACAAAAAADu/wYAAQACAAAAAADu/wcAAQACAAAAAADu/wgAAQACAAAAAADu/wkAAQACAAAAAADu/woAAQACAAAAAADv//P/AQACAAAAABDw//P/AQACAAAAABDx//P/AQACAAAAABDy//P/AQACAAAAABDz//P/AQACAAAAABD0//P/AQACAAAAABD1//P/AQACAAAAABD4//P/AQACAAAAABD5//P/AQACAAAAABD6//P/AQACAAAAABD7//P/AQACAAAAABD8//P/AQACAAAAABD9//P/AQACAAAAABD+//P/AQACAAAAABD///P/AQACAAAAABAAAPP/AQACAAAAABABAPP/AQACAAAAABDx//b/AQAAAAAAAADx/wcAAQAAAAAAAAD+//b/AQAAAAAAAAD+/wcAAQAAAAAAAAD1/wUAAQAAAAwAAAD2//P/AQAHAAYAABDu/wsAAgAIAAUAAQDv/wsAAgAIAAUAAQDw/wsAAgAIAAUAAQDx/wsAAgAIAAUAAQDy/wsAAgAIAAUAAQDz/wsAAgAIAAUAAQD0/wsAAgAIAAUAAQD1/wsAAgAIAAUAAQD2/wsAAgAIAAUAAQD3/wsAAgAIAAUAAQD4/wsAAgAIAAUAAQD4/wwAAgAIAAUAAQD5/wwAAgAIAAUAAQD6/wwAAgAIAAUAAQD7/wwAAgAIAAUAAQD8/wwAAgAIAAUAAQD9/wwAAgAIAAUAAQD+/wwAAgAIAAUAAQD//wwAAgAIAAUAAQAAAAwAAgAIAAUAAQABAAwAAgAIAAUAAQACAAwAAgAIAAUAAQADAAwAAgAIAAUAAQDu/wwAAgAIAAUAAQDv/wwAAgAIAAUAAQDw/wwAAgAIAAUAAQDx/wwAAgAIAAUAAQDy/wwAAgAIAAUAAQDz/wwAAgAIAAUAAQD0/wwAAgAIAAUAAQD1/wwAAgAIAAUAAQD2/wwAAgAIAAUAAQD3/wwAAgAIAAUAAQD5/wsAAgAIAAUAAQD6/wsAAgAIAAUAAQD7/wsAAgAIAAUAAQD8/wsAAgAIAAUAAQD9/wsAAgAIAAUAAQD+/wsAAgAIAAUAAQD//wsAAgAIAAUAAQAAAAsAAgAIAAUAAQABAAsAAgAIAAUAAQACAAsAAgAIAAUAAQACAPT/AgAIAAUAAQACAPX/AgAIAAUAAQACAPb/AgAIAAUAAQACAPf/AgAIAAUAAQACAPj/AgAIAAUAAQACAPn/AgAIAAUAAQACAPr/AgAIAAUAAQACAPv/AgAIAAUAAQACAPz/AgAIAAUAAQACAP3/AgAIAAUAAQACAP7/AgAIAAUAAQACAP//AgAIAAUAAQACAAAAAgAIAAUAAQACAAEAAgAIAAUAAQACAAIAAgAIAAUAAQACAAMAAgAIAAUAAQACAAQAAgAIAAUAAQACAAUAAgAIAAUAAQACAAYAAgAIAAUAAQACAAcAAgAIAAUAAQACAAgAAgAIAAUAAQACAAkAAgAIAAUAAQACAAoAAgAIAAUAAQADAPT/AgAIAAUAAQADAPX/AgAIAAUAAQADAPb/AgAIAAUAAQADAPf/AgAIAAUAAQADAPj/AgAIAAUAAQADAPn/AgAIAAUAAQADAPr/AgAIAAUAAQADAPv/AgAIAAUAAQADAPz/AgAIAAUAAQADAP3/AgAIAAUAAQADAP7/AgAIAAUAAQADAP//AgAIAAUAAQADAAAAAgAIAAUAAQADAAEAAgAIAAUAAQADAAIAAgAIAAUAAQADAAMAAgAIAAUAAQADAAQAAgAIAAUAAQADAAUAAgAIAAUAAQADAAYAAgAIAAUAAQADAAcAAgAIAAUAAQADAAgAAgAIAAUAAQADAAkAAgAIAAUAAQADAAoAAgAIAAUAAQADAAsAAgAIAAUAAQACAPP/AgAIAAUAAQADAPP/AgAIAAUAAQA=")
tile_set = ExtResource("2_2cos2")

[node name="Door" parent="Enviroment/CombatRoom/EnviromentLayer" unique_id=1696342632 node_paths=PackedStringArray("tilemap") instance=ExtResource("5_0rtrp")]
position = Vector2(297.00003, -744.00006)
rotation = 0.45109546
scale = Vector2(2.1890838, 2.1890838)
next_room = ExtResource("6_lckqn")
tilemap = NodePath("../EnviromentLayer")
door_cell = Vector2i(-10, -13)
open_tile_atlas_coords = Vector2i(6, 6)
open_tile_source_id = 1
tile_alternative = 1

[node name="CharacterBody2D" parent="Enviroment/CombatRoom" unique_id=1791341929 instance=ExtResource("7_e653n")]
position = Vector2(-1110, 104)

[node name="EnemyPool" type="Node2D" parent="Enviroment/CombatRoom" unique_id=155682857]
y_sort_enabled = true

[node name="SpawnPoints" type="Node2D" parent="Enviroment/CombatRoom" unique_id=864534846]

[node name="Marker2D" type="Marker2D" parent="Enviroment/CombatRoom/SpawnPoints" unique_id=1889910884]
position = Vector2(-916, -554)

[node name="Marker2D2" type="Marker2D" parent="Enviroment/CombatRoom/SpawnPoints" unique_id=26058915]
position = Vector2(-634, -708)

[node name="Marker2D3" type="Marker2D" parent="Enviroment/CombatRoom/SpawnPoints" unique_id=388417282]
position = Vector2(-55, -742)

[node name="Marker2D4" type="Marker2D" parent="Enviroment/CombatRoom/SpawnPoints" unique_id=1472988387]
position = Vector2(470, -491)

[node name="Marker2D5" type="Marker2D" parent="Enviroment/CombatRoom/SpawnPoints" unique_id=2015649952]
position = Vector2(510, -143)

[node name="Marker2D6" type="Marker2D" parent="Enviroment/CombatRoom/SpawnPoints" unique_id=448879319]
position = Vector2(45, 97)

[node name="Marker2D7" type="Marker2D" parent="Enviroment/CombatRoom/SpawnPoints" unique_id=1239477428]
position = Vector2(-1105, -319)

[node name="Marker2D8" type="Marker2D" parent="Enviroment/CombatRoom/SpawnPoints" unique_id=1926867248]
position = Vector2(-449, 72)

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="Enviroment" unique_id=1821112813]
position = Vector2(-414, -514)
color = Color(0.7931807, 0.83726037, 0.83451945, 1)
blend_mode = 1

[node name="Ambience" parent="Enviroment" unique_id=1217222588 instance=ExtResource("8_v2eig")]

[node name="Iluminacao" type="Node2D" parent="Enviroment" unique_id=2042562764]
position = Vector2(0, 2)

[node name="PointLight2D" type="PointLight2D" parent="Enviroment/Iluminacao" unique_id=2023003348]
position = Vector2(-1290, -288.00006)
scale = Vector2(21.829157, 17.597147)
texture = SubResource("GradientTexture2D_eywpb")

[node name="PointLight2D2" type="PointLight2D" parent="Enviroment/Iluminacao" unique_id=133334014]
position = Vector2(-242, -766)
scale = Vector2(21.829157, 17.597147)
texture = SubResource("GradientTexture2D_eywpb")

[node name="PointLight2D3" type="PointLight2D" parent="Enviroment/Iluminacao" unique_id=846514973]
position = Vector2(711, -276)
scale = Vector2(21.829157, 17.597147)
texture = SubResource("GradientTexture2D_eywpb")

[node name="PointLight2D4" type="PointLight2D" parent="Enviroment/Iluminacao" unique_id=1538128981]
position = Vector2(-497, 286)
scale = Vector2(21.829157, 17.597147)
texture = SubResource("GradientTexture2D_eywpb")

[node name="WorldEnvironment" parent="Enviroment" unique_id=524466117 instance=ExtResource("9_etc2w")]

[node name="UI" type="Node2D" parent="." unique_id=311802027]

[node name="Vignette" parent="UI" unique_id=1032464629 instance=ExtResource("10_ox0p2")]

[node name="FogLayer" parent="UI" unique_id=1255796293 instance=ExtResource("11_bmnbl")]

[node name="GameOver" parent="UI" unique_id=1502145410 instance=ExtResource("12_iaffk")]

[node name="Tutorial" parent="UI" unique_id=1669778 instance=ExtResource("13_1hwj5")]

[node name="TutorialManager" type="Node2D" parent="." unique_id=1088741811 node_paths=PackedStringArray("player", "tutorial_ui")]
script = ExtResource("13_2cos2")
player = NodePath("../Enviroment/CombatRoom/CharacterBody2D")
tutorial_ui = NodePath("../UI/Tutorial")

[connection signal="ready" from="." to="TutorialManager" method="start_tutorial"]
[connection signal="room_cleared" from="Enviroment/CombatRoom" to="Enviroment/CombatRoom/EnviromentLayer/Door" method="unlock"]

[editable path="UI/Vignette"]
